feat: add relationship support and fix annotation detection
- Add O(1) field position lookups via HashMap in EntityMetadata
- Replace string-based type switches with TypeCodes byte constants
- Add relationship metadata to EntityLayout and EntityMetadata
- Fix classloader issue with annotation detection in test environments
  - Use annotation name matching instead of class equality
  - Add hasAnnotationWithName() helper to TableManager and MetadataExtractor
- Create foreign key columns for @OneToOne relationships in TableManager
- Fix RuntimeKernel to handle relationship fields (typeCode = -1)
- Consolidate documentation into top-down structure (ARCHITECTURE, DEVELOPMENT, QUERY, SPRING_DATA)
- Update Eclipse project settings for Java 21